--- a/old_posts/2017-08-14-arp-spoofing-mac.html
+++ b/old_posts/2017-08-14-arp-spoofing-mac.html
@@ -19,7 +19,7 @@
 
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content="Tanya Marwah is a graduate student in Machine Learning.">
+    <meta name="description" content="Tanya Marwah is a Robotics graduate student.">
     <meta name="author" content="Tanya Marwah">
     <link rel="alternate" type="application/rss+xml"  href="http://mohitsharma0690.github.io/feed.xml" title="Mohit Sharma RSS Feed">
 
