935c5e3 Fix lom project page.

--- a/manipulation.html
+++ b/manipulation.html
@@ -92,10 +92,15 @@
                     
                 </aside>
                 <p class="abstract">
-    Learning cooking skills using learing for manipulation.
+In this project we explored learning culinary skills such as cutting,
+pouring, drizzling using Learning from Demonstrations (LfD). For our 
+low level control policy we use Dynamic Motor Primitives which allow us
+to learn versatile skills from few demonstrations. We collected 6 demonstrations for our cutting task and use locally weighted regression to learn the parameters for our DMP policies. We tested our approach on a 7-DOF Franka Arm.
+
+[Here is a video of our results](https://drive.google.com/file/d/19C7qWeAIjeL3rySQkuCKjZxIwIfHBfzM/view)
+
 </p>
 
-<p><a href="">PDF</a> <a href="">Code</a></p>
 
                 
             </div>
