--- a/manipulation.html
+++ b/manipulation.html
@@ -91,15 +91,12 @@
                         Published 04 Dec 2018.
                     
                 </aside>
-                <p class="abstract">
-In this project we explored learning culinary skills such as cutting,
+                <p>In this project we explored learning culinary skills such as cutting,
 pouring, drizzling using Learning from Demonstrations (LfD). For our 
 low level control policy we use Dynamic Motor Primitives which allow us
-to learn versatile skills from few demonstrations. We collected 6 demonstrations for our cutting task and use locally weighted regression to learn the parameters for our DMP policies. We tested our approach on a 7-DOF Franka Arm.
+to learn versatile skills from few demonstrations. We collected 6 demonstrations for our cutting task and use locally weighted regression to learn the parameters for our DMP policies. We tested our approach on a 7-DOF Franka Arm.</p>
 
-[Here is a video of our results](https://drive.google.com/file/d/19C7qWeAIjeL3rySQkuCKjZxIwIfHBfzM/view)
-
-</p>
+<p><a href="https://drive.google.com/file/d/19C7qWeAIjeL3rySQkuCKjZxIwIfHBfzM/view">Here is a video of our results</a></p>
 
 
                 
