9ee695c update miscellaneous stuff.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ My current research interests lie in Computer Vision, Reinforcement Learning and
 Previously, I completed my Bachelors in Honors from Indian Insitute of Technology, Hyderabad (IIT-H). During this time I was advised by <a href="https://www.iith.ac.in/~vineethnb/">Prof. Vineeth N. Balasubramaniam</a>. I have also worked as a Research Intern at <a href="https://www.bosch.in/">Bosch</a>
 <br /><br />
 Here is my <a href="https://github.com/tm157/">Github</a>, <a href="https://scholar.google.com/citations?user=PGkWaiYAAAAJ">Google Scholar</a> <a href="mailto:tmarwah@cs.cmu.edu">email me</a>.
-<a href="/images/tanya_img.png"></a>.</p>
+<a href="/images/tanya_headshot/tanya_img.png"></a>.</p>
 
 <h2 id="publications">Publications</h2>
 
@@ -345,7 +345,6 @@ on a 7-DOF Franka Arm. <a href="https://drive.google.com/file/d/19C7qWeAIjeL3ryS
     
 
 </ul>
-<hr />
 
 <hr />
 
@@ -382,12 +381,12 @@ on a 7-DOF Franka Arm. <a href="https://drive.google.com/file/d/19C7qWeAIjeL3ryS
 
 <!--<ul class="projects notes">-->
 
-<!--<li class="nothumb">-->
-<!--<a href="https://www.goodreads.com/review/list/7571786-mohit-sharma/">Goodreads collection</a>: I love to read books, here is a list of some I've read and want to read.-->
-<!--</li>-->
-<!--<li class="nothumb">-->
-<!--<a href="https://sergeykarayev.com/">Website Theme</a>: The theme for this website has been inspired from Sergey's website.-->
-<!--</li>-->
+<li class="nothumb">
+<a href="https://github.com/tm157/dotfiles/blob/master/colors/photon.vim">VIM colors</a>: I'm a stickler for color themes and so I've a few of my own ones to use everywhere.
+</li>
+<li class="nothumb">
+I love to read about technology, hardrware and experiment with them. Thus, I've a slightly embarrasing number of different keyboards and mouses at home.
+</li>
 
 <!--</ul>-->
 
