--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 
             <div class="content">
                 
-                <p>I am a Masters student in <a href="https://ri.cmu.edu">Robotics Institute</a>, <a href="https://cmu.edu">CMU</a>, where I’m advised by <a href="http://www.cs.cmu.edu/~kkitani/">Prof. Kris Kitani</a>
+                <p>I am a Masters student in <a href="https://ri.cmu.edu">Robotics Institute</a>, <a href="https://cmu.edu">CMU</a>, where I’m advised by <a href="http://www.cs.cmu.edu/~kkitani/">Prof. Kris Kitani</a>. While at CMU I have also been a recipient of the <a href="http://www.siebelscholars.com/">Siebel Scholarship, 2019</a>.
 <br /><br />
-My current research interests lie in Computer Vision, Reinforcement Learning and Machine Learning. 
+My current research interests lie in Computer Vision, Reinforcement Learning and Machine Learning. I want to build robust visual representation systems that can learn with limited human supervision using interactions or unlabeled experience and generalize these representations across different tasks.
 <br /> <br />
-Previously, I completed my Bachelors in Honors from Indian Insitute of Technology, Hyderabad (IIT-H). During this time I was advised by <a href="https://www.iith.ac.in/~vineethnb/">Prof. Vineeth N. Balasubramaniam</a>. I have also worked as a Research Intern at <a href="https://www.bosch.in/">Bosch</a>
+Previously, I completed my Bachelors with Honors from <a href="https://www.iith.ac.in/">Indian Insitute of Technology, Hyderabad (IIT-H)</a>. During this time I was advised by <a href="https://www.iith.ac.in/~vineethnb/">Prof. Vineeth N. Balasubramanian</a>. 
 <br /><br />
-Here is my <a href="https://github.com/tm157/">Github</a>, <a href="https://scholar.google.com/citations?user=PGkWaiYAAAAJ">Google Scholar</a> <a href="mailto:tmarwah@cs.cmu.edu">email me</a>.
-<a href="/images/tanya_headshot/tanya_img.png"></a>.</p>
+In the past, I have also worked as a Research Intern at <a href="https://www.bosch.in/">Bosch AI</a>.
+Here is my <a href="https://github.com/tm157/">Github</a>, <a href="https://scholar.google.com/citations?user=PGkWaiYAAAAJ">Google Scholar</a> or <a href="mailto:tmarwah@cs.cmu.edu">email me</a>.</p>
 
 <h2 id="publications">Publications</h2>
 
