5abf863 add resume

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ My current research interests lie in Computer Vision, Reinforcement Learning and
 Previously, I completed my Bachelors with Honors from <a href="https://www.iith.ac.in/">Indian Insitute of Technology, Hyderabad (IIT-H)</a>. During this time I was advised by <a href="https://www.iith.ac.in/~vineethnb/">Prof. Vineeth N. Balasubramanian</a>. 
 <br /><br />
 In the past, I have also worked as a Research Intern at <a href="https://www.bosch.in/">Bosch AI</a>.
-Here is my <a href="https://github.com/tm157/">Github</a>, <a href="https://scholar.google.com/citations?user=PGkWaiYAAAAJ">Google Scholar</a> or <a href="mailto:tmarwah@cs.cmu.edu">email me</a>.</p>
+Here is my <a href="/files/CV/CV.pdf">CV</a>, <a href="https://github.com/tm157/">Github</a>, <a href="https://scholar.google.com/citations?user=PGkWaiYAAAAJ">Google Scholar</a> or <a href="mailto:tmarwah@cs.cmu.edu">email me</a>.</p>
 
 <h2 id="publications">Publications</h2>
 
@@ -223,7 +223,7 @@ DR detection challenge.</p>
                 
                 
                     <ul>
-  <li><a href="">Applications of Cognitive Computing Systems and IBM Watson ‘16</a></li>
+  <li><a href="">Applications of Cognitive Computing Systems and IBM Watson ‘17</a></li>
   <li><a href="">Research Intern, BOSCH AI, 2016</a></li>
   <li><a href="https://link.springer.com/chapter/10.1007/978-981-10-6418-0_6">PDF</a></li>
 </ul>
@@ -388,10 +388,10 @@ the instruction in the given scene.
 <!--<ul class="projects notes">-->
 
 <li class="nothumb">
-<a href="https://github.com/tm157/dotfiles/blob/master/colors/photon.vim">VIM colors</a>: I'm a stickler for color themes and so I've a few of my own ones to use everywhere.
+<a href="https://github.com/tm157/dotfiles/blob/master/colors/photon.vim">VIM colors</a>: I'm a stickler for color themes and vim. Given that no colorscheme met my requirements, I went ahead and made my own. Do try it out :). 
 </li>
 <li class="nothumb">
-I love to read about technology, hardrware and experiment with them. Thus, I've a slightly embarrasing number of different keyboards and mouses at home.
+I love to read about technology, hardrware and experiment with them. Thus, I've a slightly embarrasing number of different keyboards at home. However, I have finally converged to the Mx Master 2S as my mouse of choice. 
 </li>
 
 <!--</ul>-->
