e57a6cd Remove CVPR reference.

--- a/realanim.html
+++ b/realanim.html
@@ -109,7 +109,7 @@ control policieslearned from motion clips, thereby making the person in
 theinput image come alive
 </p>
 
-<p><a href="">Submitted to CVPR ‘19</a></p>
+<p><a href="">New!!</a></p>
 
                 
             </div>
