--- a/realanim.html
+++ b/realanim.html
@@ -19,7 +19,7 @@
 
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content="Tanya Marwah is a Robotics graduate student.">
+    <meta name="description" content="Tanya Marwah is a graduate student at Robotics Institute, CMU.">
     <meta name="author" content="Tanya Marwah">
     <link rel="alternate" type="application/rss+xml"  href="http://mohitsharma0690.github.io/feed.xml" title="Mohit Sharma RSS Feed">
 
@@ -109,7 +109,8 @@ control policieslearned from motion clips, thereby making the person in
 theinput image come alive
 </p>
 
-<p><a href="">New!!</a></p>
+<p>-<a href="">New!!</a>
+-<a href="https://drive.google.com/file/d/1xsHMyxmbbVRv4_1luE85JPqhViXz3jgh/view?usp=sharing">Video Link</a></p>
 
                 
             </div>
