a4f4df3 correct hardware spelling

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ the instruction in the given scene.
 <a href="https://github.com/tm157/dotfiles/blob/master/colors/photon.vim">VIM colors</a>: I'm a stickler for color themes and vim. Given that no colorscheme met my requirements, I went ahead and made my own. Do try it out :). 
 </li>
 <li class="nothumb">
-I love to read about technology, hardrware and experiment with them. Thus, I've a slightly embarrasing number of different keyboards at home. However, I have finally converged to the Mx Master 2S as my mouse of choice. 
+I love to read about technology, hardware and experiment with them. Thus, I've a slightly embarrasing number of different keyboards at home. However, I have finally converged to the Mx Master 2S as my mouse of choice. 
 </li>
 
 <!--</ul>-->
