fix neurips workshop date

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Tanya Marwah, Zachary C. Lipton, Jianfeng Lu, Andrej Risteski </p>
 <li><p><b>Parametric Complexity Bounds for Approximating PDEs with Neural Networks</b>  [<a href="https://arxiv.org/abs/2103.02138">pdf</a>] <br />
 Tanya Marwah, Zachary C. Lipton, Andrej Risteski  <br /> 
 Neural Information Processing Systems (NeurIPS), 2021 (Spotlight) <br /> 
-The Symbiosis of Deep Learning and Differential Equations (DLDE), NeurIPS Workshop (Spotlight)</p>
+The Symbiosis of Deep Learning and Differential Equations (DLDE), NeurIPS 2021, Workshop (Spotlight)</p>
 </li>
 <li><p><b>Attentive Semantic Video Generation using Captions</b>  [<a href="https://openaccess.thecvf.com/content_ICCV_2017/papers/Marwah_Attentive_Semantic_Video_ICCV_2017_paper.pdf">pdf</a>] <br />
 Tanya Marwah*, Gaurav Mittal*, Vineeth N Balasubramanian  <br />
