fix google scholar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 My research interests lie in machine learning and statistics. My current work focuses on optimal transport and differential equations and how they can be utilized towards developing more robust and efficient machine learning systems. </p>
 <p>Previously, I completed my Masters in Robotics at CMU, during which I was advised by <a href="http://www.cs.cmu.edu/~kkitani/">Prof. Kris Kitani</a> and was a recipient of the <a href="http://www.siebelscholars.com/">Siebel Scholarship, 2019</a>. 
 I did my Bachelors with Honors in Electrical Engineering from <a href="https://www.iith.ac.in/">Indian Institute of Technology, Hyderabad</a> where I worked with <a href="https://www.iith.ac.in/~vineethnb/">Prof. Vineeth N. Balasubramanian</a>.</p>
-<p>Here is my <a href="CV.pdf">CV</a>, <a href="https://github.com/tm157/">Github</a>, and <a href="https://scholar.google.com/citations?user=PGkWaiYAAAAJ">Google Scholar</a>. The easiest way to reach me is through email, my id is tmarwah [at] andrew [dot] cmu [dot] edu. </p>
+<p>Here is my <a href="CV.pdf">CV</a>, <a href="https://github.com/tm157/">Github</a>, and <a href="https://scholar.google.com/citations?user=_Y_XvN4AAAAJ&amp;hl">Google Scholar</a>. The easiest way to reach me is through email, my id is tmarwah [at] andrew [dot] cmu [dot] edu. </p>
 </td></tr></table>
 <h3>Preprints</h3>
 <ul>
