--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 {"@context":"https://schema.org","@type":"WebSite","description":"PhD Student at Machine Learning Department, Carnegie Mellon University.","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/tanya.jpg?raw=true"}},"url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 
-   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=f0a4731c6c4bb0eaae1a5d2f42393acd2a16568b"> -->
-   <link rel="stylesheet" href="/css/style.css?v=f0a4731c6c4bb0eaae1a5d2f42393acd2a16568b">
+   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=1f3f95ef4ae3a381ca19a3511eeeabadabdf1501"> -->
+   <link rel="stylesheet" href="/css/style.css?v=1f3f95ef4ae3a381ca19a3511eeeabadabdf1501">
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
@@ -54,7 +54,7 @@ I am interested in generative modeling, dynamical systems/sequence modeling and 
 
 <p>Most of my work involves learning about and then applying knowledge from different domains like differential equations (ODEs/PDEs/SDEs), statistics and machine learning towards a more fundamental understanding of how ML models learn and also use these insights to design better ML algorithms.</p>
 
-<p>These days I am thinking about modeling and sampling discrete data like graphs and language, and modeling temporal data—with a special focus on PDEs</p>
+<p>These days I am thinking about modeling and sampling discrete data like graphs and language, and modeling temporal data—with a special focus on PDEs.</p>
 
 <p>In the Summer of 2022, I was an intern at the <a href="https://research.google/teams/blueshift/">Blueshift Team</a> at Google, where I had the pleasure to work with Guy Gur-Ari, <a href="https://sohldickstein.com/">Jascha Sohl-Dickstein</a>, <a href="https://sites.google.com/view/yasamanbahri/home">Yasaman Bahri</a> and <a href="https://www.neyshabur.net/">Behnam Neyshabur</a> at Google. 
 Previously, I completed my Masters in Robotics at CMU, during which I was advised by <a href="https://kriskitani.github.io/">Prof. Kris Kitani</a> and was a recipient of the <a href="https://www.siebelscholars.com/">Siebel Scholarship</a>, 2019. I did my Bachelors with Honors in Electrical Engineering from Indian Institute of Technology, Hyderabad where I worked with <a href="https://people.iith.ac.in/vineethnb/">Prof. Vineeth N. Balasubramanian</a>.</p>
