--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ I am interested in generative modeling, dynamical systems/sequence modeling and 
 
 <p>Most of my work involves learning about and then applying knowledge from different domains like differential equations (ODEs/PDEs/SDEs), statistics and machine learning towards a more fundamental understanding of how ML models learn and also use these insights to design better ML algorithms.</p>
 
-<p>These days I am thinking about modeling and sampling discrete data like graphs and language, and modeling temporal data—with a special focus on PDEs.</p>
+<p>These days I am thinking mostly about modeling and sampling discrete data like graphs and language, and modeling temporal data—with a special focus on PDEs. Feel free to reach out to me if you are interested in any of these topics!!</p>
 
 <p>In the Summer of 2022, I was an intern at the <a href="https://research.google/teams/blueshift/">Blueshift Team</a> at Google, where I had the pleasure to work with Guy Gur-Ari, <a href="https://sohldickstein.com/">Jascha Sohl-Dickstein</a>, <a href="https://sites.google.com/view/yasamanbahri/home">Yasaman Bahri</a> and <a href="https://www.neyshabur.net/">Behnam Neyshabur</a> at Google. 
 Previously, I completed my Masters in Robotics at CMU, during which I was advised by <a href="https://kriskitani.github.io/">Prof. Kris Kitani</a> and was a recipient of the <a href="https://www.siebelscholars.com/">Siebel Scholarship</a>, 2019. I did my Bachelors with Honors in Electrical Engineering from Indian Institute of Technology, Hyderabad where I worked with <a href="https://people.iith.ac.in/vineethnb/">Prof. Vineeth N. Balasubramanian</a>.</p>
@@ -69,7 +69,7 @@ Previously, I completed my Masters in Robotics at CMU, during which I was advise
 <p><strong>Deep Equilibrium Based Neural Operators for Steady-State PDEs</strong><br />
 <strong>Tanya Marwah<sup>*</sup></strong>, Ashwini Pokle<sup>*</sup>, J. Zico Kolter, Zachary C. Lipton, Jianfeng Lu, Andrej Risteski <br />
 Neural Information Processing Systems (NeurIPS), 2023<br />
-(Will post on arxiv soon)</p>
+(Will post on arxiv soon!!)</p>
 
 <p><a href="https://arxiv.org/abs/2210.12101">Neural Network approximations of PDEs Beyond Linearity: A Representational Perspective</a><br />
 <strong>Tanya Marwah</strong>, Zachary C. Lipton, Jianfeng Lu, Andrej Risteski <br />
