bd44e3f add main changes

--- a/index.html
+++ b/index.html
@@ -21,18 +21,16 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="PhD Student at Machine Learning Department, Carnegie Mellon University." />
 <meta property="og:description" content="PhD Student at Machine Learning Department, Carnegie Mellon University." />
-<link rel="canonical" href="http://localhost:4000/" />
-<meta property="og:url" content="http://localhost:4000/" />
 <meta property="og:site_name" content="Tanya Marwah" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Tanya Marwah" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"PhD Student at Machine Learning Department, Carnegie Mellon University.","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"http://localhost:4000/images/tanya.jpg?raw=true"}},"url":"http://localhost:4000/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"PhD Student at Machine Learning Department, Carnegie Mellon University.","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/tanya.jpg?raw=true"}},"url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 
-   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=b2236c5bc24750be279803c74a3c6eb720f945e3"> -->
-   <link rel="stylesheet" href="/css/style.css?v=b2236c5bc24750be279803c74a3c6eb720f945e3">
+   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=bd44e3fcbabfeb9d3b09c235ee290e5858ea3caf"> -->
+   <link rel="stylesheet" href="/css/style.css?v=bd44e3fcbabfeb9d3b09c235ee290e5858ea3caf">
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
@@ -40,7 +38,7 @@
 <body>
    <div class="wrapper">
       <header>
-         <h1><a href="http://localhost:4000/">Tanya Marwah</a></h1>
+         <h1><a href="/">Tanya Marwah</a></h1>
          
          <img src="/images/tanya.jpg?raw=true" alt="Logo" />
          
@@ -69,7 +67,8 @@ Previously, I completed my Masters in Robotics at CMU, during which I was advise
 <h3 id="publications">Publications</h3>
 
 <p><a href="https://arxiv.org/abs/2312.00234">Deep Equilibrium Based Neural Operators for Steady-State PDEs</a><br />
-<strong>Tanya Marwah<sup>*</sup></strong>, Ashwini Pokle<sup>*</sup>, J. Zico Kolter, Zachary C. Lipton, Jianfeng Lu, Andrej Risteski</p>
+<strong>Tanya Marwah<sup>*</sup></strong>, Ashwini Pokle<sup>*</sup>, J. Zico Kolter, Zachary C. Lipton, Jianfeng Lu, Andrej Risteski
+Neural Information Processing Systems (NeurIPS), 2023</p>
 
 <p><a href="https://arxiv.org/abs/2210.12101">Neural Network approximations of PDEs Beyond Linearity: A Representational Perspective</a><br />
 <strong>Tanya Marwah</strong>, Zachary C. Lipton, Jianfeng Lu, Andrej Risteski <br />
