--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 {"@context":"https://schema.org","@type":"WebSite","description":"PhD Student at Machine Learning Department, Carnegie Mellon University.","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/tanya.jpg?raw=true"}},"url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 
-   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=bd44e3fcbabfeb9d3b09c235ee290e5858ea3caf"> -->
-   <link rel="stylesheet" href="/css/style.css?v=bd44e3fcbabfeb9d3b09c235ee290e5858ea3caf">
+   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=f2fdaf456f7d1e213e631ea818921373067f5e74"> -->
+   <link rel="stylesheet" href="/css/style.css?v=f2fdaf456f7d1e213e631ea818921373067f5e74">
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
@@ -67,7 +67,7 @@ Previously, I completed my Masters in Robotics at CMU, during which I was advise
 <h3 id="publications">Publications</h3>
 
 <p><a href="https://arxiv.org/abs/2312.00234">Deep Equilibrium Based Neural Operators for Steady-State PDEs</a><br />
-<strong>Tanya Marwah<sup>*</sup></strong>, Ashwini Pokle<sup>*</sup>, J. Zico Kolter, Zachary C. Lipton, Jianfeng Lu, Andrej Risteski
+<strong>Tanya Marwah<sup>*</sup></strong>, Ashwini Pokle<sup>*</sup>, J. Zico Kolter, Zachary C. Lipton, Jianfeng Lu, Andrej Risteski <br />
 Neural Information Processing Systems (NeurIPS), 2023</p>
 
 <p><a href="https://arxiv.org/abs/2210.12101">Neural Network approximations of PDEs Beyond Linearity: A Representational Perspective</a><br />
