--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 {"@context":"https://schema.org","@type":"WebSite","description":"PhD Student at Machine Learning Department, Carnegie Mellon University.","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/tanya.jpg?raw=true"}},"url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 
-   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=c2a67977ffb6f88ec2ac1091c2c8cc36f0374fbc"> -->
-   <link rel="stylesheet" href="/css/style.css?v=c2a67977ffb6f88ec2ac1091c2c8cc36f0374fbc">
+   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=4747c334cc2792368f91e93ebfc0ae10af4bceb6"> -->
+   <link rel="stylesheet" href="/css/style.css?v=4747c334cc2792368f91e93ebfc0ae10af4bceb6">
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
@@ -56,7 +56,7 @@ I am interested in generative modeling, dynamical systems/sequence modeling and 
 
 <p>These days I am thinking mostly about modeling and sampling discrete data like graphs and language, and modeling temporal data—with a special focus on PDEs. Feel free to reach out to me if you are interested in any of these topics!!</p>
 
-<p>In the Summer of 2022, I was an intern at the <a href="https://research.google/teams/blueshift/">Blueshift Team</a> at Google, where I had the pleasure to work with Guy Gur-Ari, <a href="https://sohldickstein.com/">Jascha Sohl-Dickstein</a>, <a href="https://sites.google.com/view/yasamanbahri/home">Yasaman Bahri</a> and <a href="https://www.neyshabur.net/">Behnam Neyshabur</a> at Google. 
+<p>In the Summer of 2022, I was an intern at the <a href="https://research.google/teams/blueshift/">Blueshift Team</a> at Google, where I had the pleasure to work with Guy Gur-Ari, <a href="https://sohldickstein.com/">Jascha Sohl-Dickstein</a>, <a href="https://sites.google.com/view/yasamanbahri/home">Yasaman Bahri</a> and <a href="https://www.neyshabur.net/">Behnam Neyshabur</a>. 
 Previously, I completed my Masters in Robotics at CMU, during which I was advised by <a href="https://kriskitani.github.io/">Prof. Kris Kitani</a> and was a recipient of the <a href="https://www.siebelscholars.com/">Siebel Scholarship</a>, 2019. I did my Bachelors with Honors in Electrical Engineering from Indian Institute of Technology, Hyderabad where I worked with <a href="https://people.iith.ac.in/vineethnb/">Prof. Vineeth N. Balasubramanian</a>.</p>
 
 <hr />
