--- a/index.html
+++ b/index.html
@@ -21,18 +21,16 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="PhD Student at Machine Learning Department, Carnegie Mellon University." />
 <meta property="og:description" content="PhD Student at Machine Learning Department, Carnegie Mellon University." />
-<link rel="canonical" href="http://localhost:4000/" />
-<meta property="og:url" content="http://localhost:4000/" />
 <meta property="og:site_name" content="Tanya Marwah" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Tanya Marwah" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"PhD Student at Machine Learning Department, Carnegie Mellon University.","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"http://localhost:4000/images/tanya.jpg?raw=true"}},"url":"http://localhost:4000/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"PhD Student at Machine Learning Department, Carnegie Mellon University.","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/tanya.jpg?raw=true"}},"url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 
-   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=02c6ad05822ae41947a08e82d3d31ebbc0701fee"> -->
-   <link rel="stylesheet" href="/css/style.css?v=02c6ad05822ae41947a08e82d3d31ebbc0701fee">
+   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=39a83acf48f79a0a8c68c2fd9af7c5bc007b4e39"> -->
+   <link rel="stylesheet" href="/css/style.css?v=39a83acf48f79a0a8c68c2fd9af7c5bc007b4e39">
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
@@ -40,7 +38,7 @@
 <body>
    <div class="wrapper">
       <header>
-         <h1><a href="http://localhost:4000/">Tanya Marwah</a></h1>
+         <h1><a href="/">Tanya Marwah</a></h1>
          
          <img src="/images/tanya.jpg?raw=true" alt="Logo" />
          
