--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 {"@context":"https://schema.org","@type":"WebSite","description":"PhD Student at Machine Learning Department, Carnegie Mellon University.","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/tanya.jpg?raw=true"}},"url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 
-   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=02c6ad05822ae41947a08e82d3d31ebbc0701fee"> -->
-   <link rel="stylesheet" href="/css/style.css?v=02c6ad05822ae41947a08e82d3d31ebbc0701fee">
+   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=f96238a887f395d4fcf531d41564d29c89904796"> -->
+   <link rel="stylesheet" href="/css/style.css?v=f96238a887f395d4fcf531d41564d29c89904796">
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
@@ -50,7 +50,7 @@
       </header>
       <section>
          <p>Hello! I am a PhD student at the Machine Learning Department, CMU, where I am co-advised by <a href="https://www.andrew.cmu.edu/user/aristesk/">Prof. Andrej Risteski</a> and <a href="https://www.zacharylipton.com/">Prof. Zachary Lipton</a>. 
-I am interested in generative modeling, dynamical systems/sequence modeling and the use of ML in scientific applications (AI4Science) and scientific discovery in general.</p>
+I am interested in generative modeling, dynamical systems/sequence modeling and the use of AI for scientific discovery (AI4Science) and mathematics in general.</p>
 
 <p>Most of my work involves learning about and then applying knowledge from different domains like differential equations (ODEs/PDEs/SDEs), statistics and machine learning towards a more fundamental understanding of how ML models learn and also use these insights to design better ML algorithms.</p>
 
