--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 {"@context":"https://schema.org","@type":"WebSite","description":"tmarwah [at] andrew [dot] cmu [dot] edu","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/Tanya.png?raw=true"}},"url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 
-   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=5f37b19dc630131ec95ab6aef42ed6063204d7ce"> -->
-   <link rel="stylesheet" href="/css/style.css?v=5f37b19dc630131ec95ab6aef42ed6063204d7ce">
+   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=3c607ebeece6956c4a7dc91813391b272e0eea30"> -->
+   <link rel="stylesheet" href="/css/style.css?v=3c607ebeece6956c4a7dc91813391b272e0eea30">
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
@@ -67,7 +67,7 @@ Feel free to reach out to me if you are interested in any of these topics!!</p>
 
 <p>In Summer of 2024, I was an intern at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-new-england/">Microsoft New England</a>, where I worked with <a href="https://dmelis.github.io/">David Alvarez-Melis</a>, <a href="http://nicolofusi.com/">Nicolo Fusi</a> and <a href="https://stanford.edu/~lmackey/">Lester Mackey</a>. Here, I worked on improving the zero-shot reasoning capabilities of large language models (LLMs) by utilizing context dependent embeddings!!</p>
 
-<p>In the Summer of 2022, I was an intern at the <a href="https://research.google/teams/blueshift/">Blueshift Team</a> at Google, where I had the pleasure to work with Guy Gur-Ari, <a href="https://sohldickstein.com/">Jascha Sohl-Dickstein</a>, <a href="https://sites.google.com/view/yasamanbahri/home">Yasaman Bahri</a> and <a href="https://www.neyshabur.net/">Behnam Neyshabur</a> and worked on understanding the <em>out-of-distribution generalization of large language models</em> using synthetic data.</p>
+<p>In Summer of 2022, I was an intern at the <a href="https://research.google/teams/blueshift/">Blueshift Team</a> at Google, where I had the pleasure to work with Guy Gur-Ari, <a href="https://sohldickstein.com/">Jascha Sohl-Dickstein</a>, <a href="https://sites.google.com/view/yasamanbahri/home">Yasaman Bahri</a> and <a href="https://www.neyshabur.net/">Behnam Neyshabur</a> and worked on understanding the <em>out-of-distribution generalization of large language models</em> using synthetic data.</p>
 
 <p>Previously, I completed my Masters in Robotics at CMU, during which I was advised by <a href="https://kriskitani.github.io/">Prof. Kris Kitani</a> and was a recipient of the <a href="https://www.siebelscholars.com/">Siebel Scholarship</a>, 2019. I did my Bachelors with Honors in Electrical Engineering from Indian Institute of Technology, Hyderabad where I worked with <a href="https://people.iith.ac.in/vineethnb/">Prof. Vineeth N. Balasubramanian</a>.</p>
 
@@ -77,7 +77,7 @@ Feel free to reach out to me if you are interested in any of these topics!!</p>
 
 <h2 id="publications">Publications</h2>
 
-<p><strong>GMamba: Towards characterizing the value of edge embeddings in GNNs</strong> <br />
+<p><strong>GMamba: Generalized State Space Models For Language, Images and Graphs</strong> <br />
 Aakash Lahoti<sup>*</sup>, <strong>Tanya Marwah<sup>*</sup></strong>, Albert Gu <br />
 <em>In Submission</em></p>
 
