--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Tanya Marwah" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"tmarwah [at] andrew [dot] cmu [dot] edu","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/Tanya.png?raw=true"}},"url":"/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"tmarwah [at] andrew [dot] cmu [dot] edu","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/Tanya2.png?raw=true"}},"url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 
-   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=3c607ebeece6956c4a7dc91813391b272e0eea30"> -->
-   <link rel="stylesheet" href="/css/style.css?v=3c607ebeece6956c4a7dc91813391b272e0eea30">
+   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=e3db6eba1e949d4c7672bf7a6afa3df570fdf954"> -->
+   <link rel="stylesheet" href="/css/style.css?v=e3db6eba1e949d4c7672bf7a6afa3df570fdf954">
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
@@ -46,7 +46,7 @@
       <header>
          <h1><a href="/">Tanya Marwah</a></h1>
          
-         <img src="/images/Tanya.png?raw=true" alt="Logo" />
+         <img src="/images/Tanya2.png?raw=true" alt="Logo" />
          
          <p>tmarwah [at] andrew [dot] cmu [dot] edu
 </p>
