update with correct links.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 {"@context":"https://schema.org","@type":"WebSite","description":"tmarwah [at] andrew [dot] cmu [dot] edu","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/Tanya2.png?raw=true"}},"url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 
-   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=3dd4cf52b3db553bc1508f7d15088867040990a3"> -->
-   <link rel="stylesheet" href="/css/style.css?v=3dd4cf52b3db553bc1508f7d15088867040990a3">
+   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=83cf5de308761591f10b4bd7649947e524d2317f"> -->
+   <link rel="stylesheet" href="/css/style.css?v=83cf5de308761591f10b4bd7649947e524d2317f">
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
@@ -62,10 +62,13 @@
       <section>
          <p>Hi! I am a PhD student at the Machine Learning Department, CMU, where I am co-advised by <a href="https://www.andrew.cmu.edu/user/aristesk/">Prof. Andrej Risteski</a> and <a href="https://www.zacharylipton.com/">Prof. Zachary Lipton</a>. I am interested in the theory and empirics of Machine Learning.</p>
 
-<p>My work focuses on using large models for Scientific Discovery, with a special emphasis on reasoning for Math and Physics. I am also working on reliably and efficiently modeling continuous data under partial observability—with a special focus on PDEs.
-Feel free to reach out to me if you are interested in any of these topics!!</p>
+<!-- My work focuses on using large models for Scientific Discovery, with a special emphasis on reasoning for Math and Physics. I am also working on reliably and efficiently modeling continuous data for long time---with a special focus on PDEs.
+Feel free to reach out to me if you are interested in any of these topics!!  -->
 
-<p>In Summer of 2024, I was an intern at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-new-england/">Microsoft New England</a>, where I worked with <a href="https://dmelis.github.io/">David Alvarez-Melis</a>, <a href="http://nicolofusi.com/">Nicolo Fusi</a> and <a href="https://stanford.edu/~lmackey/">Lester Mackey</a> on improving the zero-shot reasoning capabilities of large language models (LLMs) by utilizing context dependent embeddings!!</p>
+<p>My work focuses on using large models for Scientific Discovery. Towards this, I am especially interested in reliable and efficient modeling of multimodal data—with a special emphasis on continuous data (videos, PDEs, physical dynamics) and structured discrete data (graphs, and language). I am also working on improving the reasoning capabilities of large models for science, with a special emphasis on Math and Physics. 
+<!-- Feel free to reach out to me if you are interested in any of these topics!!  --></p>
+
+<p>In Summer of 2024, I was an intern at <a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-new-england/">Microsoft New England</a>, where I worked with <a href="https://dmelis.github.io/">David Alvarez-Melis</a>, <a href="http://nicolofusi.com/">Nicolo Fusi</a> and <a href="https://stanford.edu/~lmackey/">Lester Mackey</a>. Here, I worked on improving the zero-shot reasoning capabilities of large language models (LLMs) by utilizing context dependent embeddings!!</p>
 
 <p>In Summer of 2022, I was an intern at the <a href="https://research.google/teams/blueshift/">Blueshift Team</a> at Google, where I had the pleasure to work with Guy Gur-Ari, <a href="https://sohldickstein.com/">Jascha Sohl-Dickstein</a>, <a href="https://sites.google.com/view/yasamanbahri/home">Yasaman Bahri</a> and <a href="https://www.neyshabur.net/">Behnam Neyshabur</a> and worked on understanding the <em>out-of-distribution generalization of large language models</em> using synthetic data.</p>
 
@@ -77,20 +80,20 @@ Feel free to reach out to me if you are interested in any of these topics!!</p>
 
 <h2 id="publications">Publications</h2>
 
-<p><a href="(https://drive.google.com/file/d/1W-E3K5QA2XyCRZm9iMuFeFs0SiP86xz7/view?usp=sharing)">GMamba: Generalized State Space Models For Language, Images and Graphs</a> <br />
+<p><strong>GMamba: Generalized State Space Models For Language, Images and Graphs</strong> <br />
 Aakash Lahoti<sup>*</sup>, <strong>Tanya Marwah<sup>*</sup></strong>, Albert Gu <br />
 <em>In Submission</em></p>
 
-<p><a href="https://arxiv.org/abs/2409.02313">On the Benefits of Memory for Modeling Time-Dependent PDEs</a> <br />
+<p><strong>On the Benefits of Memory for Modeling Time-Dependent PDEs</strong> <br />
 Ricardo Buitrago Ruiz, <strong>Tanya Marwah</strong>, Albert Gu, Andrej Risteski <br />
 <em>In Submission</em></p>
 
-<p><a href="https://drive.google.com/file/d/1u9_WslrqleDb4kQUwir3XS3LUgWnf8q4/view?usp=sharing">Towards characterizing the value of edge embeddings in GNNs</a> <br />
+<p><strong>Towards characterizing the value of edge embeddings in GNNs</strong> <br />
 Dhruv Rohatgi, <strong>Tanya Marwah</strong>, Zachary C. Lipton, Jianfeng Lu, Ankur Moitra, Andrej Risteski <br />
 <em>In Submission</em></p>
 
 <p><a href="https://arxiv.org/abs/2403.07187">UPS: Towards Foundation Models for PDE Solving via Cross-Modal Adaptation</a><br />
-Junhong Shen, Tanya Marwah, Ameet Talwalkar <br />
+Junhong Shen, <strong>Tanya Marwah</strong>, Ameet Talwalkar <br />
 ICML AI4Science Workshop, 2024 (Spotlight).</p>
 
 <p><a href="https://arxiv.org/abs/2312.00234">Deep Equilibrium Based Neural Operators for Steady-State PDEs</a><br />
