eb6195b remove old index.html

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 {"@context":"https://schema.org","@type":"WebSite","description":"tmarwah [at] andrew [dot] cmu [dot] edu","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/Tanya2.png?raw=true"}},"url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 
-   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=83cf5de308761591f10b4bd7649947e524d2317f"> -->
-   <link rel="stylesheet" href="/css/style.css?v=83cf5de308761591f10b4bd7649947e524d2317f">
+   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=eb6195b04f574783cb329e6a1e748787d4ce25f0"> -->
+   <link rel="stylesheet" href="/css/style.css?v=eb6195b04f574783cb329e6a1e748787d4ce25f0">
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
@@ -80,15 +80,15 @@ Feel free to reach out to me if you are interested in any of these topics!!  -->
 
 <h2 id="publications">Publications</h2>
 
-<p><strong>GMamba: Generalized State Space Models For Language, Images and Graphs</strong> <br />
+<p><a href="(https://drive.google.com/file/d/1W-E3K5QA2XyCRZm9iMuFeFs0SiP86xz7/view?usp=sharing)">GMamba: Generalized State Space Models For Language, Images and Graphs</a> <br />
 Aakash Lahoti<sup>*</sup>, <strong>Tanya Marwah<sup>*</sup></strong>, Albert Gu <br />
 <em>In Submission</em></p>
 
-<p><strong>On the Benefits of Memory for Modeling Time-Dependent PDEs</strong> <br />
+<p><a href="https://arxiv.org/abs/2409.02313">On the Benefits of Memory for Modeling Time-Dependent PDEs</a> <br />
 Ricardo Buitrago Ruiz, <strong>Tanya Marwah</strong>, Albert Gu, Andrej Risteski <br />
 <em>In Submission</em></p>
 
-<p><strong>Towards characterizing the value of edge embeddings in GNNs</strong> <br />
+<p><a href="https://drive.google.com/file/d/1u9_WslrqleDb4kQUwir3XS3LUgWnf8q4/view?usp=sharing">Towards characterizing the value of edge embeddings in GNNs</a> <br />
 Dhruv Rohatgi, <strong>Tanya Marwah</strong>, Zachary C. Lipton, Jianfeng Lu, Ankur Moitra, Andrej Risteski <br />
 <em>In Submission</em></p>
 
