2e75209 remove old index.html

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 {"@context":"https://schema.org","@type":"WebSite","description":"tmarwah [at] andrew [dot] cmu [dot] edu","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/Tanya2.png?raw=true"}},"url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 
-   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=eb6195b04f574783cb329e6a1e748787d4ce25f0"> -->
-   <link rel="stylesheet" href="/css/style.css?v=eb6195b04f574783cb329e6a1e748787d4ce25f0">
+   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=2e752094de2bbc2804e227426abb07646e1a5775"> -->
+   <link rel="stylesheet" href="/css/style.css?v=2e752094de2bbc2804e227426abb07646e1a5775">
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
@@ -80,7 +80,7 @@ Feel free to reach out to me if you are interested in any of these topics!!  -->
 
 <h2 id="publications">Publications</h2>
 
-<p><a href="(https://drive.google.com/file/d/1W-E3K5QA2XyCRZm9iMuFeFs0SiP86xz7/view?usp=sharing)">GMamba: Generalized State Space Models For Language, Images and Graphs</a> <br />
+<p><a href="https://drive.google.com/file/d/1W-E3K5QA2XyCRZm9iMuFeFs0SiP86xz7/view?usp=sharing">GMamba: Generalized State Space Models For Language, Images and Graphs</a> <br />
 Aakash Lahoti<sup>*</sup>, <strong>Tanya Marwah<sup>*</sup></strong>, Albert Gu <br />
 <em>In Submission</em></p>
 
