--- a/index.html
+++ b/index.html
@@ -21,18 +21,16 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="tmarwah [at] andrew [dot] cmu [dot] edu" />
 <meta property="og:description" content="tmarwah [at] andrew [dot] cmu [dot] edu" />
-<link rel="canonical" href="http://localhost:4000/" />
-<meta property="og:url" content="http://localhost:4000/" />
 <meta property="og:site_name" content="Tanya Marwah" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Tanya Marwah" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"tmarwah [at] andrew [dot] cmu [dot] edu","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"http://localhost:4000/images/Tanya2.png?raw=true"}},"url":"http://localhost:4000/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"tmarwah [at] andrew [dot] cmu [dot] edu","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/Tanya2.png?raw=true"}},"url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 
-   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=2e752094de2bbc2804e227426abb07646e1a5775"> -->
-   <link rel="stylesheet" href="/css/style.css?v=2e752094de2bbc2804e227426abb07646e1a5775">
+   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=19bb122641dba47f9acdbb5d53c366b173718e0b"> -->
+   <link rel="stylesheet" href="/css/style.css?v=19bb122641dba47f9acdbb5d53c366b173718e0b">
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
@@ -46,7 +44,7 @@
 <body>
    <div class="wrapper">
       <header>
-         <h1><a href="http://localhost:4000/">Tanya Marwah</a></h1>
+         <h1><a href="/">Tanya Marwah</a></h1>
          
          <img src="/images/Tanya2.png?raw=true" alt="Logo" />
          
