75f4be1 add tmlr

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 {"@context":"https://schema.org","@type":"WebSite","description":"tmarwah [at] andrew [dot] cmu [dot] edu","headline":"Tanya Marwah","name":"Tanya Marwah","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"/images/Tanya2.png?raw=true"}},"url":"/"}</script>
 <!-- End Jekyll SEO tag -->
 
-   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=19bb122641dba47f9acdbb5d53c366b173718e0b"> -->
-   <link rel="stylesheet" href="/css/style.css?v=19bb122641dba47f9acdbb5d53c366b173718e0b">
+   <!-- <link rel="stylesheet" href="/assets/css/style.css?v=75f4be14761f9103399b428ed32aa0b96e8d9f48"> -->
+   <link rel="stylesheet" href="/css/style.css?v=75f4be14761f9103399b428ed32aa0b96e8d9f48">
    <!--[if lt IE 9]>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
    <![endif]-->
@@ -77,10 +77,8 @@ Feel free to reach out to me if you are interested in any of these topics!!  -->
 <p><strong>—I am on the 2024-2025 Job market!—</strong></p>
 
 <hr />
-
 <h2 id="selected-publications">Selected Publications</h2>
-
-<p><a href="https://drive.google.com/file/d/1W-E3K5QA2XyCRZm9iMuFeFs0SiP86xz7/view?usp=sharing">GMamba: Generalized State Space Models For Language, Images and Graphs</a> <br />
+<p><a href="https://drive.google.com/file/d/1W-E3K5QA2XyCRZm9iMuFeFs0SiP86xz7/view?usp=sharing">Chimera: State Space Models Beyond Sequences</a> <br />
 Aakash Lahoti<sup>*</sup>, <strong>Tanya Marwah<sup>*</sup></strong>, Albert Gu <br />
 <em>In Submission</em></p>
 
@@ -88,13 +86,14 @@ Aakash Lahoti<sup>*</sup>, <strong>Tanya Marwah<sup>*</sup></strong>, Albert Gu 
 Ricardo Buitrago Ruiz, <strong>Tanya Marwah</strong>, Albert Gu, Andrej Risteski <br />
 <em>In Submission</em></p>
 
-<p><a href="https://drive.google.com/file/d/1u9_WslrqleDb4kQUwir3XS3LUgWnf8q4/view?usp=sharing">Towards characterizing the value of edge embeddings in GNNs</a> <br />
+<p><a href="https://arxiv.org/abs/2410.09867">Towards characterizing the value of edge embeddings in GNNs</a> <br />
 Dhruv Rohatgi, <strong>Tanya Marwah</strong>, Zachary C. Lipton, Jianfeng Lu, Ankur Moitra, Andrej Risteski <br />
 <em>In Submission</em></p>
 
 <p><a href="https://arxiv.org/abs/2403.07187">UPS: Towards Foundation Models for PDE Solving via Cross-Modal Adaptation</a><br />
 Junhong Shen, <strong>Tanya Marwah</strong>, Ameet Talwalkar <br />
-ICML AI4Science Workshop, 2024 (Spotlight).</p>
+ICML AI4Science Workshop, 2024 (Spotlight) <br />
+Transactions on Machine Learning Research (TMLR), 2024</p>
 
 <p><a href="https://arxiv.org/abs/2312.00234">Deep Equilibrium Based Neural Operators for Steady-State PDEs</a><br />
 <strong>Tanya Marwah<sup>*</sup></strong>, Ashwini Pokle<sup>*</sup>, J. Zico Kolter, Zachary C. Lipton, Jianfeng Lu, Andrej Risteski <br />
@@ -117,10 +116,9 @@ Neural Information Processing Systems (NeurIPS), 2021 (Spotlight)</p>
 IEEE International Conference on Computer Vision (ICCV), 2017</p>
 
 <hr />
-<h3 id="working-paper">Working Paper</h3>
-
+<h2 id="working-paper">Working Paper</h2>
 <p><a href="https://drive.google.com/file/d/1y4hQ03PmEr2AW5VTsts7JJQoSPZywLaW/view?usp=sharing">Improving Zero-Shot Reasoning Using Dynamic Non-Verbal Tokens</a> <br />
-<strong>Tanya Marwah</strong>, Zhili Feng, Lester Mackey, Nicolo Fusi, David Alvarez-Melis \</p>
+<strong>Tanya Marwah</strong>, Zhili Feng, Lester Mackey, Nicolo Fusi, David Alvarez-Melis</p>
 
       </section>
       <footer>
